DEV/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin_SalesforceIQ__c</fullName>
        <label>Origin (created by SalesforceIQ)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SalesforceIQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesforceIQ_Id__c</fullName>
        <label>SalesforceIQ Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_ID__c</fullName>
        <label>Staff ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <inlineHelpText>Please fill the student ID that provided when student was joined</inlineHelpText>
        <label>Student ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fidaddress__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fidcompanyDuration__c</fullName>
        <label>Current Company Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fidcompanyHistory__c</fullName>
        <label>Company History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fidcompany__c</fullName>
        <label>Current Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fidimage__c</fullName>
        <label>Image URLs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fidliurl__c</fullName>
        <label>LinkedIn URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fidtitle__c</fullName>
        <label>Current Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fidtwhan__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Clean_Mobile_Phone__c</fullName>
        <description>xSMS : cleaned mobile number for xSMS</description>
        <formula>xsms__Mobile_Phone_Country_Code__c +&apos;-&apos;+TRIM ( SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(SUBSTITUTE(IF(BEGINS(MobilePhone,&apos;0&apos;),RIGHT(MobilePhone, LEN(MobilePhone)-1),MobilePhone),&apos; &apos;,&apos;&apos;),&apos;-&apos;,&apos;&apos;),
&apos;+&apos;,&apos;&apos;
),
&apos;(&apos;,&apos;&apos;
)
,&apos;)&apos;,&apos;&apos;
)
)</formula>
        <inlineHelpText>cleaned mobile number for xSMS</inlineHelpText>
        <label>Clean Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Inbound_MobilePhone_Format__c</fullName>
        <formula>xsms__Mobile_Phone_Country_Code__c+TRIM ( SUBSTITUTE( 
				SUBSTITUTE( 
				SUBSTITUTE( 
				SUBSTITUTE(SUBSTITUTE(MobilePhone,&apos; &apos;,&apos;&apos;),&apos;-&apos;,&apos;&apos;), 
				&apos;+&apos;,&apos;&apos; 
				), 
				&apos;(&apos;,&apos;&apos; 
				) 
				,&apos;)&apos;,&apos;&apos; 
				) 
				)</formula>
        <label>Inbound MobilePhone Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Last_SMS_received__c</fullName>
        <description>Details of last received SMS</description>
        <inlineHelpText>Details of last received SMS</inlineHelpText>
        <label>Last SMS received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xsms__Mobile_Phone_Country_Code__c</fullName>
        <description>country isd code.</description>
        <inlineHelpText>country isd code.</inlineHelpText>
        <label>Mobile Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Mobile_Phone_Country__c</fullName>
        <description>select country for provided mobile phone for sending SMS</description>
        <inlineHelpText>select country for provided mobile phone for sending SMS</inlineHelpText>
        <label>Mobile Phone Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra/Vatican City</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antarctica/Norfolk Island</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>Australia/Christmas Island/Cocos-Keeling Islands</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzogovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burma (Myanmar)</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xsms__SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No SMS would be send to Contact if SMS Opt Out is marked true.</description>
        <inlineHelpText>No SMS would be send to Contact if SMS Opt Out is marked true.</inlineHelpText>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <description>This Record Type is Used to Represent the contact is belongs to Parent of Student</description>
        <label>Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <description>This Record Type is Used to Represent the contact is belongs to Staff of school</description>
        <label>Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>This Record Type is Used to Represent the contact is belongs to Student</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>